<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="23dp"
        android:src="@drawable/profile_image"
        app:civ_border_color="@color/colorPrimary"
        app:civ_border_width="2dp" />

    <TextView
        style="@style/navHeaderTvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ProfileName" />

    <TextView
        style="@style/navHeaderTvEditProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/EditProfile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"

        >

        <TextView
            android:id="@+id/networks"
            style="@style/tvitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_networks"
            android:paddingLeft="15sp"
            android:paddingTop="10dp"
            android:text="@string/netview" />

        <Switch
            android:id="@+id/switch1"
            style="@style/networksSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="18dp"

        >

        <TextView
            android:id="@+id/payment"
            style="@style/tvitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_payment_normal"
            android:text="@string/payment" />

        <TextView
            android:id="@+id/jobhis"
            style="@style/tvitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_job_normal"
            android:text="@string/jobhis" />

        <TextView
            android:id="@+id/emcontact"
            style="@style/tvitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_emergency_normal"
            android:text="@string/emcontact" />

        <TextView
            android:id="@+id/help"
            style="@style/tvitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_help_normal"
            android:text="@string/help" />

        <TextView
            android:id="@+id/logout"
            style="@style/tvitem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/icon_logout_normal"
            android:text="@string/logout" />


    </LinearLayout>

    <TextView
        android:id="@+id/support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/support"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@drawable/call_icon_pressed"

        />


</LinearLayout>
