<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_otplabel"
        style="@style/ForgotTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotpassword_label"

        />

    <EditText
        android:id="@+id/et_contact"
        style="@style/PrimaryEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_passwordtextview"
        android:hint="@string/forgotpassword_contacthint"
        android:inputType="phone" />

    <Button
        android:id="@+id/bt_continue"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgotpassword_bttext" />

</LinearLayout>
