<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rishucuber.fragmentapplications.Activity.Activity.VerifictionActivity"
    tools:showIn="@layout/activity_verifiction">

    <TextView
        android:id="@+id/tv_otplabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="49dp"
        android:layout_marginRight="49dp"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:text="@string/verification_otplabeltext"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_numberlabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="7dp"
        android:gravity="center"
        android:text="@string/verification_numbertext"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal">

        <EditText
            style="@style/VerificationEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            />

        <EditText
            style="@style/VerificationEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            style="@style/VerificationEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            style="@style/VerificationEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/confirm"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/verification_bttext" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/changenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/verification_changeNumber"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:layout_weight="0.5"
            android:gravity="end"
            android:text="@string/verification_resendotp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>


</LinearLayout>
